unpackaged/config/npc/objects/Budget/fields/Budget_FormQualifiedApiName__c.field-meta.xml
<CustomField>
    <fullName>Budget_FormQualifiedApiName__c</fullName>
    <label>Budget Form Qualified API Name</label>
    <defaultValue>&quot;%%%NAMESPACED_ORG%%%Budget_Edit&quot;</defaultValue>
    <length>255</length>
    <type>Text</type>
    <description>Qualified API name of the Flow Tool Kit form used to add or edit the budget record itself from the Universal Budget grid. Blank hides those actions for this budget.</description>
    <inlineHelpText>Qualified API name (e.g. FlowToolKit__Budget_Edit) of the form used to edit this budget's details from the grid. Leave blank to hide the edit action.</inlineHelpText>
</CustomField>