unpackaged/config/npc/objects/Budget/fields/Category_FormQualifiedApiName__c.field-meta.xml
<CustomField>
    <fullName>Category_FormQualifiedApiName__c</fullName>
    <label>Category Form Qualified API Name</label>
    <defaultValue>&quot;%%%NAMESPACED_ORG%%%Category_Edit&quot;</defaultValue>
    <length>255</length>
    <type>Text</type>
    <description>Qualified API name of the Flow Tool Kit form used to add or edit the category records (rows) from the Universal Budget grid. Blank hides those actions for this budget.</description>
    <inlineHelpText>Qualified API name (e.g. FlowToolKit__Category_Edit) of the form used to add and edit this budget's categories from the grid. Leave blank to hide those actions.</inlineHelpText>
</CustomField>