unpackaged/config/npc/objects/Budget/fields/Has_Violations__c.field-meta.xml
<CustomField>
    <fullName>Has_Violations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Violations</label>
    <type>Checkbox</type>
    <description>Stamped by the Universal Budget package (#47): true while any budget, category or period limit is breached, or money sits in a period outside the budget's dates. Mapped as the Budget Has Violations Field. The package writes it; enforcement (validation rules, Flows, approvals) is yours.</description>
    <inlineHelpText>Shown when something in this budget is outside its limits. Open the budget to see what needs attention.</inlineHelpText>
</CustomField>