unpackaged/config/npc/objects/Budget/fields/Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Amount__c</fullName>
    <label>Maximum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Maximum total amount allowed for the budget. Drives the total budget limit and the progress bar maximum when no requested amount is set.</description>
    <inlineHelpText>Upper limit for the total budgeted amount. The grid flags the budget when the total exceeds this. Leave 0 for no limit.</inlineHelpText>
</CustomField>