unpackaged/config/npc/objects/Budget/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <label>Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Minimum total amount allowed for the budget.</description>
    <inlineHelpText>Lower limit for the total budgeted amount. The grid flags the budget while the total is below this. Leave 0 for no minimum.</inlineHelpText>
</CustomField>