unpackaged/config/npc/objects/Budget/fields/Period_FormQualifiedApiName__c.field-meta.xml
<CustomField>
    <fullName>Period_FormQualifiedApiName__c</fullName>
    <label>Period Form Qualified API Name</label>
    <defaultValue>&quot;%%%NAMESPACED_ORG%%%Period_Edit&quot;</defaultValue>
    <length>255</length>
    <type>Text</type>
    <description>Qualified API name of the Flow Tool Kit form used to add or edit the period records (columns) from the Universal Budget grid. Blank hides those actions for this budget.</description>
    <inlineHelpText>Qualified API name (e.g. FlowToolKit__Period_Edit) of the form used to add and edit this budget's periods from the grid. Leave blank to hide those actions.</inlineHelpText>
</CustomField>