unpackaged/config/npc/objects/Budget/fields/Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount__c</fullName>
    <label>Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Requested funding amount. Drives the progress bar maximum and the reconciliation target.</description>
    <inlineHelpText>Amount requested for this grant. The budget grid compares the total budgeted amount against this value.</inlineHelpText>
</CustomField>