unpackaged/config/npc/objects/Budget/fields/Value_FormQualifiedApiName__c.field-meta.xml
<CustomField>
    <fullName>Value_FormQualifiedApiName__c</fullName>
    <label>Value Form Qualified API Name</label>
    <defaultValue>&quot;%%%NAMESPACED_ORG%%%Value_Edit&quot;</defaultValue>
    <length>255</length>
    <type>Text</type>
    <description>Qualified API name of the Flow Tool Kit form used to add or edit the value (cell) records from the Universal Budget grid. Blank hides those actions for this budget.</description>
    <inlineHelpText>Qualified API name (e.g. FlowToolKit__Value_Edit) of the form used to edit individual amount records from the grid's cell pencil. Leave blank to hide it.</inlineHelpText>
</CustomField>