unpackaged/config/npc/objects/Budget/fields/Violation_Count__c.field-meta.xml
<CustomField>
    <fullName>Violation_Count__c</fullName>
    <label>Violation Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Stamped by the Universal Budget package (#47): how many limits are currently breached, matching the grid's Review issues count and the Flow screen outputs. Mapped as the Budget Violation Count Field.</description>
    <inlineHelpText>How many things currently need attention in this budget.</inlineHelpText>
</CustomField>